--- a/frontend/src/scss/globals/_footer.scss
+++ b/frontend/src/scss/globals/_footer.scss
@@ -171,6 +171,7 @@
 
     img {
       margin: 0 6px;
+      height: revert;
     }
 
     .intern-center {
